checkboxes added to the tasks but code very ugly

--- a/artifacts/web/public/index.html
+++ b/artifacts/web/public/index.html
@@ -25,6 +25,7 @@
         <input id='todo_input' />
         <button id='add_todo'>Add</button>
         <span id='todo_output'></span>
+        <div id='todo_outputs'></div>
       </div>
     </div>
   </body>
