adding guard to automatically build and also more refactorings

--- a/artifacts/web/public/index.html
+++ b/artifacts/web/public/index.html
@@ -22,10 +22,9 @@
       <div class='page' id='todoForm'>
         <h3>A ToDo List</h3>
         <div id='todos'></div>
-        <input id='todo_input' />
+        <input id='task_input' />
         <button id='add_todo'>Add</button>
-        <span id='todo_output'></span>
-        <div id='todo_outputs'></div>
+        <div id='tasks'></div>
       </div>
     </div>
   </body>
